# rust-faces

./: Cargo.toml
benches/: detectors.rs
src/: blazeface.rs  builder.rs  detection.rs  mtcnn.rs  ort.rs  testing.rs  viz.rs
tests/: test_code_design.rs
